style: red buttons for auth and register buttons; fix z-index on auth modal (#1916)

--- a/assets/blocks/reader-registration/editor.scss
+++ b/assets/blocks/reader-registration/editor.scss
@@ -15,8 +15,8 @@
 			border-radius: 0;
 		}
 		[type='submit'] {
-			transition: background 150ms ease-in-out;
-			background: #555;
+			transition: background-color 150ms ease-in-out;
+			background-color: #d33;
 			border: none;
 			border-radius: 5px;
 			box-sizing: border-box;
